# devc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  on-start.sh  test-runner.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/devc-cli/: Cargo.toml
crates/devc-cli/src/: commands.rs  lib.rs  main.rs  selector.rs
crates/devc-cli/src/commands/: lifecycle.rs  manage.rs  mod.rs
crates/devc-cli/tests/: agents_mock_tests.rs  cli_fast_tests.rs  cli_mock_tests.rs  e2e_tests.rs
crates/devc-config/: Cargo.toml
crates/devc-config/src/: devcontainer.rs  error.rs  global.rs  lib.rs  substitute.rs
crates/devc-core/: Cargo.toml
crates/devc-core/src/: browser_forward.rs  build.rs  container.rs  dotfiles.rs  error.rs  lib.rs  manager.rs  ssh.rs  state.rs  test_support.rs
crates/devc-core/src/agents/: cursor_auth.rs  host.rs  inject.rs  mod.rs  presets.rs
crates/devc-core/src/credentials/: host.rs  inject.rs  mod.rs
crates/devc-core/src/features/: compose_override.rs  dockerfile.rs  download.rs  install.rs  mod.rs  resolve.rs
crates/devc-core/src/manager/: build.rs  compose.rs  discovery.rs  exec.rs  lifecycle.rs  mod.rs
crates/devc-core/tests/: e2e_features.rs  e2e_lifecycle.rs  e2e_port_forwarding.rs  e2e_tests.rs
crates/devc-provider/: Cargo.toml
crates/devc-provider/src/: cli_provider.rs  docker.rs  docker_auth.rs  error.rs  host_podman.rs  lib.rs  types.rs
crates/devc-tui/: Cargo.toml
crates/devc-tui/src/: app.rs  clipboard.rs  compose_state.rs  demo.rs  event.rs  lib.rs  port_state.rs  ports.rs  settings.rs  shell.rs  shell_state.rs  stats.rs  tunnel.rs  ui.rs
crates/devc-tui/src/ui/: containers.rs  detail.rs  dialogs.rs  header_footer.rs  mod.rs  output.rs  ports.rs  progress.rs  spinner.rs
crates/devc-tui/src/widgets/: dialog.rs  mod.rs  text_input.rs
crates/devc-tui/tests/: app_tests.rs  e2e_port_tests.rs  keystroke_tests.rs  snapshot_tests.rs
crates/devc-tui/tests/helpers/: mod.rs
crates/devc-tui/tests/snapshots/: snapshot_tests__agent_diagnostics_popup.snap  snapshot_tests__build_output_view.snap  snapshot_tests__compose_container_detail_loading.snap  snapshot_tests__compose_container_detail_with_services.snap  snapshot_tests__compose_container_list_badge.snap  snapshot_tests__container_detail_view.snap  snapshot_tests__container_operation_spinner.snap  snapshot_tests__container_operation_spinner_adopting.snap  snapshot_tests__container_operation_spinner_forgetting.snap  snapshot_tests__containers_view_empty.snap  snapshot_tests__containers_view_with_items.snap  snapshot_tests__discover_detail_view.snap  snapshot_tests__help_view.snap  snapshot_tests__logs_view.snap  snapshot_tests__ports_popup_empty.snap  snapshot_tests__ports_popup_with_ports.snap  snapshot_tests__provider_detail_popup.snap  snapshot_tests__providers_view.snap  snapshot_tests__rebuild_confirm_dialog.snap  snapshot_tests__settings_view.snap  snapshot_tests__simple_confirm_dialog.snap
docs/: agent-auth-sync-notes.md  agent-injection-impl.md  agent-injection-plan.md  credential-forwarding-research.md  testing.md
tests/fixtures/compose-multi/.devcontainer/: devcontainer.json  docker-compose.yml
tests/fixtures/lifecycle/.devcontainer/: devcontainer.json
tests/fixtures/runtime-flags/.devcontainer/: devcontainer.json
tests/fixtures/variable-subst/.devcontainer/: devcontainer.json
tests/toolbox-env/: Containerfile  flatpak-spawn
