[workspace]
resolver = "2"
members = [
    "crates/devc-cli",
    "crates/devc-tui",
    "crates/devc-core",
    "crates/devc-provider",
    "crates/devc-config",
]

[workspace.package]
version = "1.3.1"
edition = "2021"
license = "MIT"
authors = ["Walter <s-retlaw>"]
repository = "https://github.com/s-retlaw/devc"
homepage = "https://github.com/s-retlaw/devc"
keywords = ["devcontainer", "docker", "podman", "container", "development"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Container interaction
bollard = "0.16"

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Other
thiserror = "1"
anyhow = "1"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
nix = { version = "0.29", features = ["term", "poll", "signal", "process"] }
shellexpand = "3"
tar = "0.4"
flate2 = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }

# Internal crates
devc-config = { path = "crates/devc-config" }
devc-provider = { path = "crates/devc-provider" }
devc-core = { path = "crates/devc-core" }
devc-tui = { path = "crates/devc-tui" }
