[package]
name = "devc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for devc"

[lib]
name = "devc_cli"
path = "src/lib.rs"

[[bin]]
name = "devc"
path = "src/main.rs"

[dependencies]
devc-core = { workspace = true }
devc-config = { workspace = true }
devc-provider = { workspace = true }
devc-tui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
toml = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
mimalloc = "0.1"
shell-words = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
devc-core = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
