[package]
name = "devc-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for devc - devcontainer.json and global config"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
dirs = "5"
