[package]
name = "devc-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Container provider trait and implementations for devc"

[dependencies]
devc-config = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
