[package]
name = "devc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI application for devc"

[dependencies]
devc-core = { workspace = true }
devc-config = { workspace = true }
devc-provider = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ansi-to-tui = "4"
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
devc-core = { workspace = true, features = ["test-support"] }
insta = "1"
tempfile = { workspace = true }
